Set minimum column width for time entries to prevent jumping

--- a/public/assets/pm.css
+++ b/public/assets/pm.css
@@ -30,6 +30,7 @@
 
 .pm-time {
     text-align: right;
+    min-width: 80px;
 }
 
 .pm-time span {
